(Apache Rat) RAT-115 Migrate tests to junit4. Many thanks to Hugo Hirsch for the patch.
git-svn-id: https://svn.apache.org/repos/asf/creadur/main/trunk@1337943 13f79535-47bb-0310-9956-ffa450edef68